changed the color of one page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </nav>
       <div class="p-3 mb-2 bg-dark text-white">
       <span class="border">
+          <div class="container">
             <div class="mx-auto" style="width: 700px;">
       <h2>About me</h2>
 
@@ -45,6 +46,7 @@
                     it creates stories, adventures, and ideas when im boerd. This is my site created with bootstrap non of that tedious CSS work here.</p>
                     
                       </div>
+                    </div>
       </span>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
